--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-NewBox/core/migrations/__pycache__/0001_initial.cpython-39.pyc
-NewBox/core/__pycache__/__init__.cpython-39.pyc
-NewBox/core/__pycache__/admin.cpython-39.pyc
-NewBox/core/__pycache__/apps.cpython-39.pyc
-NewBox/core/__pycache__/models.cpython-39.pyc
-NewBox/core/__pycache__/urls.cpython-39.pyc
-NewBox/core/__pycache__/views.cpython-39.pyc
-NewBox/core/migrations/__pycache__/__init__.cpython-39.pyc
+NewBox/core/migrations/__pycache__/*
+NewBox/core/__pycache__/*
+NewBox/core/migrations/__pycache__/*
+NewBox/NewBoxAPI/__pycache__/*
 # Default ignored files
 /shelf/
 NewBox/.idea/workspace.xml
