--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 django == 4.0.4
 mysqlclient == 2.1.0
 spotipy == 2.19.0
-fastapi == 0.78.0
+fastapi==0.78.0
 python-vlc == 3.0.16120
+requests==2.25.1
+uvicorn==0.17.6
