--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ mysqlclient == 2.1.0
 spotipy == 2.19.0
 fastapi == 0.78.0
 python-vlc == 3.0.16120
+requests==2.25.1
+uvicorn==0.17.6
+pyalsaaudio==0.9.2
