--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ python-vlc == 3.0.16120
 requests==2.25.1
 uvicorn==0.17.6
 pyalsaaudio==0.9.2
+colorthief==0.2.1
+colormap==1.0.4
+serial
+urllib3==1.26.6
+Pillow == 8.4.0
