--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ uvicorn==0.17.6
 pyalsaaudio==0.9.2
 colorthief==0.2.1
 colormap==1.0.4
-serial==0.0.97
+pyserial==3.5
 urllib3==1.26.6
 Pillow==8.4.0
